tests/snapshots/tui_issue_list_tests__issue_list_empty.snap
---
source: tests/tui_issue_list_tests.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "┌Issues────────────────────────────────────────────────────────────────────────┐",
        "│   #     Name                       Author          Updated                   │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 79, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
