tests/snapshots/tui_issue_list_tests__issue_list_renders.snap
---
source: tests/tui_issue_list_tests.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "┌Issues────────────────────────────────────────────────────────────────────────┐",
        "│   #     Name                       Author          Updated                   │",
        "│                                                                              │",
        "│>> 1     First issue                Alice           2025-01-03 00:00:00       │",
        "│   2     Second issue               Bob             2025-01-02 00:00:00       │",
        "│   3     (untitled)                 Carol           2025-01-01 00:00:00       │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 79, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 79, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
